# CLI-music-player

./: .gitignore  README.md  pyproject.toml  requirements.txt
MusicPlayer/: Interface.py  audioEngine.py  config.json  library.py  main.py  musicController.py  player.py  requirements.txt  themes.py
MusicPlayer/components/: audioVisualizer.py  button.py  miniTerminal.py  musicPlayerActions.py  songProgress.py  songTable.py
MusicPlayer/functions/: coverToAscii.py  extractAudioWave.py  filterFormats.py  timeConvert.py
climusic/: Interface.py  audioEngine.py  library.py  main.py  musicController.py  requirements.txt  test.py  themes.py
climusic/components/: audioVisualizer.py  miniTerminal.py  musicPlayerActions.py  nowPlaying.py  searchResults.py  songTable.py
climusic/components/actions/: appearance.py  commands.py  playback.py  playlists.py  search.py
climusic/functions/: ambientVisualizer.py  coverToAscii.py  downlaodNecessaryPackages.py  extractAudioWave.py  filterFormats.py  turnicateText.py
