[project]
name = "CLPYmusic"
version = "0.1.7"
description = "A CLI music player"
requires-python = ">=3.10"
dependencies = [
    "textual",
    "pynput",
    "mutagen",
    "python-vlc",
    "librosa",
    "numpy",
    "Pillow",
    "miniaudio",
    "pyperclip",
]

[project.scripts]
climusic = "climusic.Interface:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
climusic = ["assets/*"]